--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <i class="bi bi-film text-primary-custom"></i>Non<span style="color:#be121b">Ime</span>
         </a>
         <ul class="nav-menu" id="nav-menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">Movies</a></li>
           <li><a href="#">Ganre</a></li>
           <a href="#" class="btn btn-hover">
@@ -90,7 +90,7 @@
         <ul>
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="About Us.html" style="text-decoration:none ">About Us</a>
+            <a href="#" style="text-decoration:none ">About Us</a>
           </li>
           <li class="breadcrumb-item">
             <a href="#" style="text-decoration: none">Streaming</a>
